# blog

./: .gitignore  .gitmodules  Dockerfile  README.md  blog.cabal  build.sh  cabal-ghcjs.project  cabal.project  default.nix  deploy.nix  docker.nix  flake.nix  index.html  init.el  release.nix  shell.nix
client/: base.html.j2  client.cabal  index.html.j2  index.org  music.html.j2  music.org  not-found.html.j2  particle-life.html.j2  posts.html.j2  style.css  two-hand-demo.html.j2  two-hand-demo.org
client/hs/: hs.cabal
client/hs/particle-life/: Main.hs
client/hs/two-hand-demo/: Main.hs
client/lib/: Utils.hs
client/lib/Markup/: M.hs
client/lib/Markup/Compile/: Widget.hs
client/markup-demo/: Main.hs
client/music/: Main.hs
client/not-found/: Main.hs
client/particle-life/: Main.hs
client/posts/: HelloWorld.hs  Main.hs  correspondence.html.j2  correspondence.org  haskell-is-simple.html.j2  haskell-is-simple.org  hello-world.html.j2  hello-world.org  immutable-javascript.html.j2  immutable-javascript.org  javascript-no-mutation.html.j2  javascript-no-mutation.org  pure-javascript.html.j2  pure-javascript.org
client/src/: Main.hs  MarkupDemo.hs  Music.hs  NotFound.hs  ParticleLife.hs  Post.hs  Posts.hs  TulipDemo.hs
client/src/Post/: HelloWorld.hs
client/src/Posts/: HelloWorld.hs
client/tulip-demo/: Main.hs
client/two-hand-demo/: Main.hs
common/: common.cabal
common/src/: Markup.hs
content/posts/: hello
markup/: markup.cabal
markup/src/: Markup.hs
markup/src/Markup/: Parse.hs
markup/src/Markup/Compile/: Exp.hs  Widget.hs
posts/: hello-world  hi
server/: server.cabal
server/src/: Main.hs
src/: Compile.hs  Main.hs  Parse.hs
www/: 404  footer  header  header.html  index.html  markup-demo.html  music.html  not-found.html  particle-life.html  posts.html  style.css  tulip-demo.html  tulip.html  two-hand-demo.html
