cabal-version: 3.6
name: blog
version: 0.1.0.0

common shared
  default-language: GHC2021
  default-extensions:
    LambdaCase
  ghc-options:
    -Weverything
    -Wno-missing-safe-haskell-mode
    -Wno-implicit-prelude
    -Wno-missing-kind-signatures
    -Wno-missing-deriving-strategies
    -Wno-name-shadowing
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-prepositive-qualified-module
    -Wno-unused-do-bind
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-monomorphism-restriction

executable blog
  import: shared
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Parse
    , Compile
  build-depends:
    base
    , directory
    , bytestring
    , text
    , warp
    , wai
    , http-types
