cabal-version: 2.4
name: client
version: 0.1.0.0

flag dev
  default: False

executable client
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    , LambdaCase
  if !flag(dev) && impl(ghcjs)
    ghc-options:
      -dedupe
      -Wall
      -O2
  else
    ghc-options:
      -Wall
      -O0
  other-modules:
    Post
    Posts
  build-depends:
    base
    , common
    , reflex
    , reflex-dom
    , jsaddle-dom
    , containers
    , text
    , split
    , time
