cabal-version: 2.4
name: client
version: 0.1.0.0

flag dev
  default: False

executable client
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    , LambdaCase
    , QuasiQuotes
    , RankNTypes
  if !flag(dev) && impl(ghcjs)
    ghc-options:
      -dedupe
      -Wall
      -Wno-name-shadowing
      -O2
      -fsimpl-tick-factor=1000
  else
    ghc-options:
      -Wall
      -Wno-name-shadowing
      -O0
  other-modules:
    Post
    Posts.HelloWorld
    NotFound
    TulipDemo
    MarkupDemo
  build-depends:
    base
    , markup
    , reflex
    , reflex-dom
    , jsaddle-dom
    , containers
    , text
    , split
    , time
    , tulip
    , raw-strings-qq
