cabal-version: 2.4
name: client
version: 0.1.0.0

flag dev
  default: False

common common
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    , LambdaCase
    , TemplateHaskell
    , QuasiQuotes
    , RankNTypes
    , NamedFieldPuns
  ghc-options:
    -Wall
    -Wno-name-shadowing

common exe
  import: common
  if !flag(dev) && impl(ghcjs)
    ghc-options:
      -dedupe
      -O2
      -fsimpl-tick-factor=1000
  else
    ghc-options:
      -O0

library
  import: common
  hs-source-dirs: lib
  exposed-modules:
    Utils
    Markup.M
    Markup.Parse
    Markup.Compile.Widget
    Markup.Compile.Exp
  build-depends:
    base
    , text
    , split
    , template-haskell
    , jsaddle-dom
    , reflex-dom
    , parss
    , transformers

executable posts
  import: exe
  hs-source-dirs: posts
  main-is: Main.hs
  build-depends:
    client
    , base
    , reflex-dom
    , raw-strings-qq
    , time
    , text

executable music
  import: exe
  hs-source-dirs: music
  main-is: Main.hs
  build-depends:
    client
    , base
    , reflex-dom
    , raw-strings-qq
    , text

executable markup-demo
  import: exe
  hs-source-dirs: markup-demo
  main-is: Main.hs
  build-depends:
    client
    , base
    , reflex-dom
    , raw-strings-qq
    , text

executable tulip-demo
  import: exe
  hs-source-dirs: tulip-demo
  main-is: Main.hs
  build-depends:
    client
    , base
    , reflex-dom
    , raw-strings-qq
    , text
    , tulip

executable particle-life
  import: exe
  hs-source-dirs: particle-life
  main-is: Main.hs
  build-depends:
    client
    , base
    , jsaddle
    , jsaddle-dom
    , reflex-dom
    , raw-strings-qq
    , text
    , tulip

executable not-found
  import: exe
  hs-source-dirs: not-found
  main-is: Main.hs
  build-depends:
    client
    , base
    , reflex-dom
