cabal-version: 2.4
name: markup
version: 0.1.0.0

library
  hs-source-dirs: src
  exposed-modules: Markup
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    , LambdaCase
    , QuasiQuotes
    , TemplateHaskell
    , TupleSections
  ghc-options:
    -Wall
    -Wno-name-shadowing
  build-depends:
    base
    , text
    , reflex-dom
    , template-haskell
