cabal-version: 2.4
name: server
version: 0.1.0.0

flag dev
  default: False

executable server
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    , LambdaCase
  if flag(dev)
    ghc-options:
      -Wall
      -Wno-name-shadowing
      -O0
  else
    ghc-options:
      -Wall
      -Wno-name-shadowing
      -O2
  build-depends:
    base
    , wai
    , warp
    , http-types
    , text
    , bytestring
