cabal-version: 2.4
name: server
version: 0.1.0.0

flag dev
  default: False

executable server
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    , LambdaCase
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-name-shadowing
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-unused-do-bind
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-monomorphism-restriction
    -Wno-missing-local-signatures
    -Wno-safe
  if flag(dev)
    ghc-options:
      -O0
  else
    ghc-options:
      -O2
  build-depends:
    base
    , wai
    , warp
    , http-types
    , text
    , bytestring
